# EmbeddedProject1

./: EmbeddedProject1.sln
.visualgdb/CodeDB/EmbeddedProject1.vgdbcmake-Debug-VisualGDB/: EmbeddedProject1-00001.npa00  EmbeddedProject1-00001.npd  EmbeddedProject1-00001.rdb  EmbeddedProject1-00002.npa01  EmbeddedProject1-00002.npd  EmbeddedProject1-00002.rdb  EmbeddedProject1.npa00  EmbeddedProject1.npd  EmbeddedProject1.rdb  GlobalFileTable.000  GlobalFileTable.001  MyAdder.npa00  MyAdder.npd  MyAdder.rdb  codedb.lck  mainTest.npa00  startup_stm32f401xe.npa00  startup_stm32f401xe.npd  startup_stm32f401xe.rdb  stm32f4xx_hal.npa00  stm32f4xx_hal.npd  stm32f4xx_hal.rdb  stm32f4xx_hal_rcc.npa00  stm32f4xx_hal_rcc.npd  stm32f4xx_hal_rcc.rdb  stm32f4xx_ll_adc.npa00  stm32f4xx_ll_adc.npd  stm32f4xx_ll_adc.rdb  stm32f4xx_ll_i2c.rdb  system_stm32f4xx-00002.npa00  system_stm32f4xx-00002.npd  system_stm32f4xx-00002.rdb  system_stm32f4xx.npa00  system_stm32f4xx.npd  system_stm32f4xx.rdb  tmp00000001.npa00  tmp00000002.npa00  tmp00000003.npa00  tmp00000005.npa00  tmp00000005.rdb  (+1 more)
.visualgdb/CodeDB/EmbeddedProject1.vgdbcmake-Debug-VisualGDB/AutoPCH/: 94c.ast  94c.psf
EmbeddedProject1/: CMakeLists.txt  EmbeddedProject1.cpp  EmbeddedProject1.vgdbcmake  MyAdder.cpp  MyAdder.h  mainTest.cpp
EmbeddedProject1/.visualgdb/VisualGDBCache/EmbeddedProject1-Debug-VisualGDB/: ImplicitCompilerFlags.xml  MemoryUtilizationReport.xml  ObjectFileMap.txt  UpToDateChecklist.db
EmbeddedProject1/.visualgdb/VisualGDBCache/EmbeddedProject1-Debug-VisualGDB/CodeModelCache/: CodeModelIndex.txt  cache-v2-6709931d68d4500fb811.json  cache-v2-b23a6960703c86b5d7f3.json  cmakeFiles-v1-787eb1f95bb6f24b639b.json  cmakeFiles-v1-dac07c3d515d58cce622.json  codemodel-v2-0cba0e283793955e155b.json  codemodel-v2-352bcd07ed7d77827451.json  codemodel-v2-417e622ca7107b898831.json  codemodel-v2-57a421d19ca468a85853.json  codemodel-v2-5eca17849edc15626876.json  codemodel-v2-746c05b96972f7dfd0fc.json  codemodel-v2-88692a543bd5a78d9ad7.json  codemodel-v2-ab7470d6e8126a6e38bf.json  index-2021-02-26T10-21-50-0130.json  index-2021-02-28T19-45-45-0335.json  index-2021-03-01T00-16-30-0887.json  index-2021-03-01T00-26-01-0205.json  index-2021-03-01T00-36-23-0105.json  index-2021-03-01T00-55-48-0197.json  index-2021-03-01T03-23-29-0420.json  index-2021-03-01T03-34-03-0949.json  target-BSP-DEBUG-055c4e6339af80d9782b.json  target-BSP-DEBUG-09229937bbe6e0171849.json  target-BSP-DEBUG-614f8ad18a9441097f6f.json  target-BSP_com.sysprogs.arm.stm32.hal-DEBUG-13db878be86ecfae498d.json  target-BSP_com.sysprogs.arm.stm32.hal-DEBUG-1841936800a0e18605c4.json  target-BSP_com.sysprogs.arm.stm32.hal-DEBUG-67cf7e556c2f840c6a2a.json  target-BSP_com.sysprogs.arm.stm32.ll-DEBUG-63203e5edd3387dae523.json  target-BSP_com.sysprogs.arm.stm32.ll-DEBUG-d437107896bc82fcf57e.json  target-BSP_com.sysprogs.arm.stm32.ll-DEBUG-ec239ca9f3812eaa2012.json  target-EmbeddedProject1-DEBUG-36e40ed7f15d66aaa41d.json  target-EmbeddedProject1-DEBUG-6b601ef33fd64af68d04.json  target-EmbeddedProject1-DEBUG-747668bd9f1fb8dea5a5.json  target-EmbeddedProject1-DEBUG-8d6964778c1aadf07ab1.json  target-EmbeddedProject1-DEBUG-df2fd5eade209b040b82.json  target-EmbeddedProject1-bin-DEBUG-630a99f2b19ff94df332.json  target-EmbeddedProject1-bin-DEBUG-ed6f2ab3ad1c9ea40184.json  target-EmbeddedProject1-bin-DEBUG-f07bb988dd9deda198c4.json  target-LibA-DEBUG-89ac6f146a54ec48390e.json  target-LibraryTest-DEBUG-0adc62880c39c764c6e4.json  (+9 more)
